tests/fixtures/invalid/pow_str_int_bool.py
# Cannot call pow() with Str, Int, Bool
x = pow("hello", 1, True)
